depoloyments_apr23_2023/deployment-template/name-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: project_name # find and replace all "project_name" with your app name
  name: project_name
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: project_name
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: project_name
    spec:
      containers:
      - image: maximuspowers/project_name #make sure this matches the docker tag, set it with "docker tag [original tag] maximuspowers/[new tag]" and then "docker push maximuspowers/[new tag]" to put it on hub
        imagePullPolicy: Always
        name: project_name
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
