depoloyments_apr23_2023/deployment-template/name-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: project_name-svc
spec:
  type: ClusterIP
  selector:
    app: project_name
  ports:
  - name: http
    port: 5020 # port you want to access it on
    targetPort: 3000 # port the app runs on
