depoloyments_apr23_2023/deployment-template/name-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project_name-ing # find and replace here too
spec:
  rules:
    - http:
        paths:
        - path: /project_name # this isn't working
          pathType: Prefix
          backend:
            service: 
              name: project_name # refs the project_name-lb.yaml service name (in metadata)
              port:
                number: 5005 #the port you want to access it on
